.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Location_Endpoint_Filtering__mdt.object
<CustomObject>
    <fields>
        <fullName>Incap311__Field_Name__c</fullName>
        <label>Field Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Field_Values__c</fullName>
        <description>Comma seperated list of white listed filed values. Values are OR&apos;d together.</description>
        <label>Field Values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Location_Endpoint__c</fullName>
        <label>Location Endpoint</label>
        <referenceTo>Incap311__Location_Endpoint__mdt</referenceTo>
        <relationshipLabel>Location Endpoint Filterings</relationshipLabel>
        <relationshipName>Location_Endpoint_Filterings</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <label>Location Endpoint Filtering</label>
    <pluralLabel>Location Endpoint Filterings</pluralLabel>
</CustomObject>